alignement ul fixed

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -13,12 +13,12 @@ body {background-color: #FFF9FF;background-image: url(../img/pattern.gif); backg
 
 /* ====== Text treatments ====== */
 
-span.slogan {background-color:#000;color:#FFF;padding:4px;display:inline-block;position: relative;left:44px;font-size: 12px;font-size: 1.2rem;font-weight: bold;text-transform: uppercase;}
+span.slogan {background-color:#000;color:#FFF;padding:4px;display:inline-block;position: relative;left:45px;font-size: 12px;font-size: 1.2rem;font-weight: bold;text-transform: uppercase;}
 
 /* links */
 
 
-li a {text-decoration: none;color:#000;background-color: #e6faff;padding: 2px;border-bottom: 1px dotted #00CCFF;}
+li a {text-decoration: none;color:#000;background-color: #e6faff;padding: 1px;position:relative;top:-5px;border-bottom: 1px dotted #00CCFF;}
 .number a, .text {font-weight: bold;}
 .number li a {background-color: transparent;border-bottom: none;}
 footer a {text-decoration: none;color: #000;border-bottom: 1px dotted #000;}
@@ -38,7 +38,7 @@ h3 {color:#000;margin: 0 0 20px 16px;font-size: 1.2rem; }
 /* ----- list ----- */
 
 li {margin:5px 0 5px 0;font-size: 15px; font-size: 1.5rem;}
-ul{ list-style-image:url('../img/files_black.png');margin:30px 0 30px 0; } 
+ul{ list-style-image:url('../img/files_black.png');margin:30px 0 20px 0; } 
 
 /* **************** TEMPLATE ***************** */
 /* ====== Page Head, Body, and Foot ====== */
